--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 language: go
-sudo: false
-script: make testdeps test
+install:
+  - go get -v -t .
+  - go get golang.org/x/tools/cmd/cover
+  - go get github.com/mattn/goveralls
+script:
+  - go build -v
+  - go test -v -covermode=count -coverprofile=coverage.out
+  - $HOME/gopath/bin/goveralls -coverprofile=coverage.out -service=travis-ci -repotoken $COVERALLS_TOKEN
 go:
-  - "1.8"
-  - "1.10"
+  - "1.12"
   - "1.x"
-  - master
+  - tip
